2014-10-25  Jan Djärv  <jan.h.d@swipnet.se>

	* nsselect.m: pasteboard_changecount is new.
	(ns_store_pb_change_count, ns_get_pb_change_count)
	(ns_get_our_change_count_for): New functions.
	(ns_string_to_pasteboard_internal): Correct comment.
	type => gtype in eassert, Call ns_store_pb_change_count.
	(Fns_own_selection_internal): Remove data, use value (Bug#18799).
	(Fns_disown_selection_internal, Fns_selection_owner_p): Replace
	Vselection_alist check, with change count check.
	(Fns_get_selection): Initialize val to Qnil.  Only get local
	selection if change counts match (Bug#18799).
	(nxatoms_of_nsselect): Initialize pasteboard_changecount.

2014-10-25  Noam Postavsky  <npostavs@users.sourceforget.net>

	* src/w32proc.c (create_child): If calling a quoted batch file,
	pass NULL for exe.  (Bug#18745)

2014-10-24  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_resolve_explicit, bidi_find_bracket_pairs)
	(bidi_resolve_brackets): Use end of string position rather than ZV
	when iterating over a string.  (Bug#18815)

2014-10-24  Martin Rudalics  <rudalics@gmx.at>

	* keyboard.c (make_lispy_position): Return coordinates also when
	on scroll bars, fringes, margins or not in a window.
	* xdisp.c (show_mouse_face): Don't change cursor face during
	mouse tracking.

2014-10-23  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (Fset_frame_height, Fset_frame_width, Fset_frame_size)
	(frame_resize_pixelwise, frame_inhibit_implied_resize): Fix
	doc-strings (Bug#18789).

2014-10-23  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.in (ACLOCAL_INPUTS): Omit unnecessary use of 'wildcard'.

2014-10-22  Eli Zaretskii  <eliz@gnu.org>

	Optimize redisplay of simple bracketed text.
	* bidi.c (bidi_cache_reset_to): New function.
	(bidi_cache_reset): Call it.
	(bidi_init_it, bidi_line_init): Initialize the bracket_pairing_pos
	member to -1.
	(bidi_resolve_explicit): Reset bracket_pairing_pos and
	bracket_enclosed_type only if bracket_pairing_pos's value is not
	ZV.